// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`elements/content-preview/PreviewNavigation render() should render correctly with a filled collection 0 1`] = `
<Router
  history={
    {
      "entries": [
        {},
      ],
      "listen": [MockFunction] {
        "calls": [
          [
            [Function],
          ],
          [
            [Function],
          ],
        ],
        "results": [
          {
            "type": "return",
            "value": undefined,
          },
          {
            "type": "return",
            "value": undefined,
          },
        ],
      },
      "location": {
        "hash": "",
        "pathname": "/activity/tasks/1234",
      },
      "push": [MockFunction],
    }
  }
>
  <PreviewNavigation
    collection={
      [
        "a",
        "b",
        "c",
        "d",
        "e",
        "f",
        "g",
        "h",
        "i",
        "j",
      ]
    }
    history={
      {
        "entries": [
          {},
        ],
        "listen": [MockFunction] {
          "calls": [
            [
              [Function],
            ],
            [
              [Function],
            ],
          ],
          "results": [
            {
              "type": "return",
              "value": undefined,
            },
            {
              "type": "return",
              "value": undefined,
            },
          ],
        },
        "location": {
          "hash": "",
          "pathname": "/activity/tasks/1234",
        },
        "push": [MockFunction],
      }
    }
    intl={
      {
        "formatMessage": [MockFunction],
      }
    }
    onNavigateLeft={[Function]}
    onNavigateRight={[Function]}
  />
</Router>
`;

exports[`elements/content-preview/PreviewNavigation render() should render correctly with a filled collection 1 1`] = `
<Router
  history={
    {
      "entries": [
        {},
      ],
      "listen": [MockFunction] {
        "calls": [
          [
            [Function],
          ],
          [
            [Function],
          ],
        ],
        "results": [
          {
            "type": "return",
            "value": undefined,
          },
          {
            "type": "return",
            "value": undefined,
          },
        ],
      },
      "location": {
        "hash": "",
        "pathname": "/activity/tasks/1234",
      },
      "push": [MockFunction],
    }
  }
>
  <PreviewNavigation
    collection={
      [
        "a",
        "b",
        "c",
        "d",
        "e",
        "f",
        "g",
        "h",
        "i",
        "j",
      ]
    }
    history={
      {
        "entries": [
          {},
        ],
        "listen": [MockFunction] {
          "calls": [
            [
              [Function],
            ],
            [
              [Function],
            ],
          ],
          "results": [
            {
              "type": "return",
              "value": undefined,
            },
            {
              "type": "return",
              "value": undefined,
            },
          ],
        },
        "location": {
          "hash": "",
          "pathname": "/activity/tasks/1234",
        },
        "push": [MockFunction],
      }
    }
    intl={
      {
        "formatMessage": [MockFunction],
      }
    }
    onNavigateLeft={[Function]}
    onNavigateRight={[Function]}
  />
</Router>
`;

exports[`elements/content-preview/PreviewNavigation render() should render correctly with a filled collection 9 1`] = `
<Router
  history={
    {
      "entries": [
        {},
      ],
      "listen": [MockFunction] {
        "calls": [
          [
            [Function],
          ],
          [
            [Function],
          ],
        ],
        "results": [
          {
            "type": "return",
            "value": undefined,
          },
          {
            "type": "return",
            "value": undefined,
          },
        ],
      },
      "location": {
        "hash": "",
        "pathname": "/activity/tasks/1234",
      },
      "push": [MockFunction],
    }
  }
>
  <PreviewNavigation
    collection={
      [
        "a",
        "b",
        "c",
        "d",
        "e",
        "f",
        "g",
        "h",
        "i",
        "j",
      ]
    }
    history={
      {
        "entries": [
          {},
        ],
        "listen": [MockFunction] {
          "calls": [
            [
              [Function],
            ],
            [
              [Function],
            ],
          ],
          "results": [
            {
              "type": "return",
              "value": undefined,
            },
            {
              "type": "return",
              "value": undefined,
            },
          ],
        },
        "location": {
          "hash": "",
          "pathname": "/activity/tasks/1234",
        },
        "push": [MockFunction],
      }
    }
    intl={
      {
        "formatMessage": [MockFunction],
      }
    }
    onNavigateLeft={[Function]}
    onNavigateRight={[Function]}
  />
</Router>
`;

exports[`elements/content-preview/PreviewNavigation render() should render correctly with an empty collection 1`] = `
<Router
  history={
    {
      "entries": [
        {},
      ],
      "listen": [MockFunction] {
        "calls": [
          [
            [Function],
          ],
          [
            [Function],
          ],
        ],
        "results": [
          {
            "type": "return",
            "value": undefined,
          },
          {
            "type": "return",
            "value": undefined,
          },
        ],
      },
      "location": {
        "hash": "",
        "pathname": "/activity/tasks/1234",
      },
      "push": [MockFunction],
    }
  }
>
  <PreviewNavigation
    collection={[]}
    currentIndex={0}
    history={
      {
        "entries": [
          {},
        ],
        "listen": [MockFunction] {
          "calls": [
            [
              [Function],
            ],
            [
              [Function],
            ],
          ],
          "results": [
            {
              "type": "return",
              "value": undefined,
            },
            {
              "type": "return",
              "value": undefined,
            },
          ],
        },
        "location": {
          "hash": "",
          "pathname": "/activity/tasks/1234",
        },
        "push": [MockFunction],
      }
    }
    intl={
      {
        "formatMessage": [MockFunction],
      }
    }
    onNavigateLeft={[Function]}
    onNavigateRight={[Function]}
  />
</Router>
`;
